# gbdraw

./: .dockerignore  .gitignore  AGENTS.md  CITATION.cff  CLAUDE.md  Dockerfile  KERNING_IMPACT_ANALYSIS.md  LICENSE  LICENSE.txt  MANIFEST.in  README.md  app.py  circular.py  circular_object_groups.py  circular_path_drawer.py  config.toml  data_processing.py  entrypoint.sh  file_processing.py  gbdraw_colab.ipynb  gbdraw_interface.ipynb  index.html  linear_diagram_components.py  linear_feature_drawer.py  linear_object_groups.py  nginx.conf  package-lock.json  package.json  packages.txt  playwright.config.js  pyproject.toml  requirements.txt  run.sh  service.yaml  setup.py  supervisord.conf  wrangler.toml
.claude/: settings.local.json
.streamlit/: config.toml
_reproduced/: missing_inputs.json
color_palettes/: ajisai.txt  alpine_retreat.txt  arctic.txt  arctic_dawn.txt  autumn.txt  autumn_harvest.txt  berry_field.txt  citrine_verdure.txt  citrus_grove.txt  deep_saturates.txt  desert_mirage.txt  dune.txt  earth.txt  earth_and_clay.txt  earthtones.txt  edelweiss.txt  emerald_twilight.txt  forest.txt  forest_canopy.txt  forest_morning.txt  fugaku.txt  galaxy.txt  hearbal_garden.txt  kuroshio.txt  lavender_fields.txt  majestic_sunrise.txt  marine.txt  matcha_whispers.txt  metallic_sheen.txt  metropolitan_blues.txt  misty_mountains.txt  oceanic_voyage.txt  orchid.txt  pbt.txt  pine_reflection.txt  psyche.txt  royal_gala.txt  sakura.txt  savannah.txt  seaside.txt  (+10 more)
docs/: ABOUT.md  ADR_PYTHON_SESSION_API.md  ADVANCED.md  AGENT_GUIDES_NPX_DISTRIBUTION_PLAN.md  CIRCULAR_CUSTOM_TRACK_SLOT_PRESET_BASE_PLAN.md  CIRCULAR_FEATURE_R_PRESET_STACK_PLAN.md  CIRCULAR_TICK_GC_OVERLAP_FIX_PLAN.md  CIRCULAR_TRACK_SLOTS_ROOT_FIX_PLAN.md  CIRCULAR_TRACK_SLOTS_UNIFIED_RESOLVER_PLAN.md  CLI_Reference.md  CLI_TABLE_ARGUMENTS_FOLLOWUP_PLAN.md  CLI_TABLE_ARGUMENTS_PLAN.md  CLI_TABLE_ARGUMENTS_REMAINING_WORK_PLAN.md  CLI_TSV_AUDIT_FIX_PLAN.md  CLI_TSV_INPUTS_IMPLEMENTATION_PLAN.md  CODEBASE_REDUCTION_PLAN.md  DEPTH_TRACK_SPARSE_BINDING_IMPLEMENTATION_PLAN.md  DIAGRAM_OPTIONS_AUDIT.md  DOCS.md  DOCUMENTATION_TUTORIAL_GALLERY_IMPLEMENTATION_PLAN.md  EXPORT.md  FAQ.md  FEATURE_VISIBILITY_SUPPRESSION_PLAN.md  GALLERY.md  GALLERY_REFRESH_HANDOFF_2026-07-20.md  GC_CONTENT_PERCENT_TRACK_PLAN.md  GFF3_FASTA.md  INSTALL.md  INSTALLATION.md  INTERACTIVE_SVG_ORTHOGROUP_SEQUENCE_PLAN.md  INTERACTIVE_SVG_SEARCH_PERFORMANCE_IMPLEMENTATION_PLAN.md  ISSUE_239_LINEAR_MULTI_RECORD_IMPLEMENTATION_PLAN.md  ISSUE_286_ANNOTATION_TRACK_IMPLEMENTATION_PLAN.md  ISSUE_288_RECORD_SELECTOR_IMPLEMENTATION_PLAN.md  LABEL_RENDERING_POLICY_PLAN.md  LIBRARY_USAGE.md  LINEAR_CUSTOM_TRACK_SLOTS_PLAN.md  LINEAR_TRACK_OCCUPANCY_LAYOUT_IMPLEMENTATION_PLAN.md  LOSAT_CACHE_IDENTITY_AND_LINEAR_SPACING_REGRESSION_IMPLEMENTATION_PLAN.md  LOSAT_COMPACT_RUNTIME_HANDLE_MIGRATION_IMPLEMENTATION_PLAN.md  (+42 more)
examples/: LvMJNV.TrcuMJNV.tblastx.out  LvMJNV.fasta  LvMJNV.gb  MeenMJNV.MejoMJNV.tblastx.out  MeenMJNV.fasta  MeenMJNV.gb  MejoMJNV.fasta  MejoMJNV.gb  MelaMJNV.PemoMJNVA.tblastx.out  MelaMJNV.fasta  MelaMJNV.gb  MellatMJNV.MeenMJNV.tblastx.out  MellatMJNV.fasta  MellatMJNV.gb  MjeNMV.MelaMJNV.tblastx.out  MjeNMV.fasta  MjeNMV.gb  NC_010162.feature-specific_table.tsv  NC_010162.whitelist.tsv  PemoMJNVA.PeseMJNV.tblastx.out  PemoMJNVA.fasta  PemoMJNVA.gb  PemoMJNVB.LvMJNV.tblastx.out  PemoMJNVB.fasta  PemoMJNVB.gb  PeseMJNV.PemoMJNVB.tblastx.out  PeseMJNV.fasta  PeseMJNV.gb  TrcuMJNV.MellatMJNV.tblastx.out  TrcuMJNV.fasta  TrcuMJNV.gb  cds_white.tsv  chloroplast_specific_table.tsv  cli_table_blast.tsv  cli_table_blast_inputs.tsv  cli_table_circular_depth_tracks.tsv  cli_table_circular_inputs.tsv  cli_table_circular_track_slots.tsv  cli_table_depth_tracks.tsv  cli_table_inputs.tsv  (+19 more)
gbdraw/: __init__.py  _build_support.py  _web_assets.py  app.py  canvas_generator.py  circular.py  circular_diagram_components.py  circular_feature_drawer.py  circular_object_groups.py  circular_path_drawer.py  cli.py  create_feature_objects.py  crop_genbank.py  data_processing.py  definition_line_styles.py  exceptions.py  feature_objects.py  file_processing.py  find_font_files.py  geometry.py  interface.py  linear.py  linear_comparison.py  linear_diagram_components.py  linear_feature_drawer.py  linear_object_groups.py  linear_path_drawer.py  object_configurators.py  session.py  session_io.py  session_request_codec.py  text.py  utility_functions.py  version.py
nginx/: Dockerfile  nginx.conf
recipe/: build.sh  meta.yaml
test-results/: .last-run.json
tests/: __init__.py  conftest.py  run_losat_cache_browser_acceptance.py  test_annotations.py  test_api_library_usage.py  test_api_request_render.py  test_api_requests.py  test_api_session.py  test_circular_annotation_tracks.py  test_circular_conservation.py  test_circular_feature_paths.py  test_circular_feature_width.py  test_circular_label_placement.py  test_circular_multi_canvas.py  test_circular_preset_geometry.py  test_circular_radial_labels.py  test_circular_radial_layout.py  test_circular_ticks.py  test_circular_track_slots.py  test_circular_tracks.py  test_cli_table_arguments.py  test_cli_tables.py  test_collinearity.py  test_collinearity_units.py  test_color_table_parsing.py  test_comparisons.py  test_core_text.py  test_definition_line_styles.py  test_depth_track.py  test_feature_selector_values.py  test_feature_shapes.py  test_feature_tracks.py  test_feature_underlay_rendering.py  test_feature_visibility.py  test_gallery_session_semantics.py  test_gc_content_percent.py  test_gff_multipart.py  test_interactive_svg_cli_format.py  test_label_overrides.py  test_label_rendering_policy.py  (+30 more)
tools/: build_web_css.py  capture_circular_preset_oracle.py  capture_gallery_tutorial_screenshots.py  generate_open_source_notices.py  generate_palette_explorer_assets.py  generate_palette_page.py  prepare_browser_wheel.py  prepare_cloudflare_pages.py  prepare_interactive_gallery_assets.py  promote_gallery_session.mjs  refresh_gallery_sessions.py  reproduce_examples.py  reproduce_examples_manifest.py  stamp_web_build.py  (+2 more)
(+585 files in other folders)
